added createInTable process controller handler
